# Basic-Raytracer-ACG2026

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  color.h  hittable.h  main.cc  material.h  sphere.h  util.h  vec3.h
